refactor linking api definitions