@@ -7,12 +7,11 @@ package io.github.tomaki19.gradle.cmake.extension.api;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.Test;
-
-import io.github.tomaki19.gradle.cmake.model.CMakeVisibility;
 
 class CMakeExecutableLinkingTest {
 
@@ -25,7 +24,7 @@ class CMakeExecutableLinkingTest {
   @Test
   void testGetOptions() {
     CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    Collection<CMakeBuildItems> options = linking.getOptions();
+    Collection<CMakeBuildSpec> options = linking.getOptions();
     assertNotNull(options);
     assertEquals(0, options.size());
   }
@@ -33,7 +32,7 @@ class CMakeExecutableLinkingTest {
   @Test
   void testGetDependencies() {
     CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    Collection<CMakeExecutableDependencies> dependencies = linking.getDependencies();
+    Collection<CMakeExecutableLinkSpec> dependencies = linking.getDependencySpecs();
     assertNotNull(dependencies);
     assertEquals(0, dependencies.size());
   }
@@ -41,50 +40,32 @@ class CMakeExecutableLinkingTest {
   @Test
   void testOption() {
     CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    linking.options("-L/usr/lib");
+    linking.options(List.of("-L/usr/lib"), Map.of());
     assertEquals(1, linking.getOptions().size());
-    assertEquals(new CMakeBuildItems(CMakeVisibility.PRIVATE, "-L/usr/lib"), linking.getOptions().iterator().next());
+    assertEquals(CMakeBuildSpec.Init.create(List.of("-L/usr/lib"), Map.of()),
+        linking.getOptions().iterator().next());
   }
 
   @Test
   void testOptionsVarargs() {
     CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    linking.options("-L/usr/lib", "-L/usr/local/lib");
+    linking.options(List.of("-L/usr/lib", "-L/usr/local/lib"), Map.of());
     assertEquals(1, linking.getOptions().size());
-    assertEquals(new CMakeBuildItems(CMakeVisibility.PRIVATE, "-L/usr/lib", "-L/usr/local/lib"),
+    assertEquals(CMakeBuildSpec.Init.create(List.of("-L/usr/lib", "-L/usr/local/lib"), Map.of()),
         linking.getOptions().iterator().next());
   }
 
   @Test
-  void testDependencyCharSequence() {
+  void testDependency() {
     CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    CMakeBinaryDependencies dep = linking.link("mylib");
-    assertNotNull(dep);
-    assertEquals(1, linking.getDependencies().size());
+    linking.link(List.of("mylib"), Map.of());
+    assertEquals(1, linking.getDependencySpecs().size());
   }
 
   @Test
-  void testDependencyObject() {
+  void testDependenciesMultipleComponents() {
     CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    CMakeExecutableDependencies dep = new CMakeExecutableDependencies("mylib");
-    linking.link(Arrays.asList(dep));
-    assertEquals(1, linking.getDependencies().size());
-  }
-
-  @Test
-  void testDependenciesVarargs() {
-    CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    CMakeExecutableDependencies dep = linking.link("lib1", "lib2");
-    assertNotNull(dep);
-    assertEquals(1, linking.getDependencies().size());
-  }
-
-  @Test
-  void testDependenciesCollection() {
-    CMakeExecutableLinking linking = new CMakeExecutableLinking();
-    CMakeExecutableDependencies dep1 = new CMakeExecutableDependencies("lib1");
-    CMakeExecutableDependencies dep2 = new CMakeExecutableDependencies("lib2");
-    linking.link(java.util.Arrays.asList(dep1, dep2));
-    assertEquals(2, linking.getDependencies().size());
+    linking.link(List.of("lib1", "lib2"), Map.of());
+    assertEquals(1, linking.getDependencySpecs().size());
   }
 }
