@@ -8,15 +8,15 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 
 import org.gradle.api.Project;
 import org.gradle.testfixtures.ProjectBuilder;
 import org.junit.jupiter.api.Test;
 
 import io.github.tomaki19.gradle.cmake.extension.CMakeExtension;
-import io.github.tomaki19.gradle.cmake.extension.api.CMakeBuildItems;
-import io.github.tomaki19.gradle.cmake.extension.api.CMakeExecutableDependencies;
-import io.github.tomaki19.gradle.cmake.extension.api.CMakeLibraryDependencies;
+import io.github.tomaki19.gradle.cmake.extension.api.CMakeLibraryLinkSpec;
 import io.github.tomaki19.gradle.cmake.helper.TestCMakeBinaryLibrary;
 import io.github.tomaki19.gradle.cmake.helper.TestCMakeInterfaceLibrary;
 import io.github.tomaki19.gradle.cmake.helper.TestCMakePackage;
@@ -24,186 +24,196 @@ import io.github.tomaki19.gradle.cmake.helper.TestCMakeToolchain;
 
 public class CMakeToolchainResolverTest {
 
-    @Test
-    void resolveNoLinkDependenciesTest() throws Exception {
-        final Project project = ProjectBuilder.builder().build();
-        final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
-                CMakeExtension.class, project.getTasks());
+        @Test
+        void resolveNoLinkDependenciesTest() throws Exception {
+                final Project project = ProjectBuilder.builder().build();
+                final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
+                                CMakeExtension.class, project.getTasks());
 
-        TestCMakePackage.register("Package0", extension);
-        TestCMakeBinaryLibrary.register("BinaryLibrary0", extension, CMakeBuildVariant.SHARED);
-        TestCMakeToolchain.register("Toolchain0", extension);
+                TestCMakePackage.register("Package0", extension);
+                TestCMakeBinaryLibrary.register("BinaryLibrary0", extension, CMakeBuildVariant.SHARED);
+                TestCMakeToolchain.register("Toolchain0", extension);
 
-        assertEquals(1, extension.getPackages().size());
-        assertEquals(1, extension.getToolchains().size());
-        assertEquals(1, extension.getLibraries().size());
-        assertEquals(0, extension.getApplications().size());
-        assertEquals(0, extension.getTests().size());
+                assertEquals(1, extension.getPackages().size());
+                assertEquals(1, extension.getToolchains().size());
+                assertEquals(1, extension.getLibraries().size());
+                assertEquals(0, extension.getApplications().size());
+                assertEquals(0, extension.getTests().size());
 
-        final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
-                extension.getToolchains());
-        final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
-                extension.getApplications(), extension.getTests());
+                final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
+                                extension.getToolchains());
+                final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
+                                extension.getApplications(), extension.getTests());
 
-        final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
-        assertEquals(1, toolchains.length);
-    }
+                final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
+                assertEquals(1, toolchains.length);
+        }
 
-    @Test
-    void resolveInterfaceLinkDependenciesTest() throws Exception {
-        final Project project = ProjectBuilder.builder().build();
-        final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
-                CMakeExtension.class, project.getTasks());
+        @Test
+        void resolveInterfaceLinkDependenciesTest() throws Exception {
+                final Project project = ProjectBuilder.builder().build();
+                final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
+                                CMakeExtension.class, project.getTasks());
 
-        TestCMakePackage.register("Package0", extension);
-        TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
-        TestCMakeBinaryLibrary.register("BinaryLibrary0", extension, CMakeBuildVariant.SHARED);
-        TestCMakeToolchain.register("Toolchain0", extension);
+                TestCMakePackage.register("Package0", extension);
+                TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
+                TestCMakeBinaryLibrary.register("BinaryLibrary0", extension, CMakeBuildVariant.SHARED);
+                TestCMakeToolchain.register("Toolchain0", extension);
 
-        assertEquals(1, extension.getPackages().size());
-        assertEquals(1, extension.getToolchains().size());
-        assertEquals(2, extension.getLibraries().size());
-        assertEquals(0, extension.getApplications().size());
-        assertEquals(0, extension.getTests().size());
+                assertEquals(1, extension.getPackages().size());
+                assertEquals(1, extension.getToolchains().size());
+                assertEquals(2, extension.getLibraries().size());
+                assertEquals(0, extension.getApplications().size());
+                assertEquals(0, extension.getTests().size());
 
-        final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
-                extension.getToolchains());
-        final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
-                extension.getApplications(), extension.getTests());
+                final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
+                                extension.getToolchains());
+                final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
+                                extension.getApplications(), extension.getTests());
 
-        final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
-        assertEquals(1, toolchains.length);
+                final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
+                assertEquals(1, toolchains.length);
 
-        assertEquals("Toolchain0", toolchains[0].getName());
-        assertEquals(1, toolchains[0].getInterfaceLibraries().size());
-        assertEquals(0, toolchains[0].getStaticLibraries().size());
-        assertEquals(1, toolchains[0].getSharedLibraries().size());
-        assertEquals(0, toolchains[0].getApplications().size());
-        assertEquals(0, toolchains[0].getTests().size());
-    }
+                assertEquals("Toolchain0", toolchains[0].getName());
+                assertEquals(1, toolchains[0].getInterfaceLibraries().size());
+                assertEquals(0, toolchains[0].getStaticLibraries().size());
+                assertEquals(1, toolchains[0].getSharedLibraries().size());
+                assertEquals(0, toolchains[0].getApplications().size());
+                assertEquals(0, toolchains[0].getTests().size());
+        }
 
-    @Test
-    void resolveLibraryLinkDependenciesTest() throws Exception {
-        final Project project = ProjectBuilder.builder().build();
-        final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
-                CMakeExtension.class, project.getTasks());
+        @Test
+        void resolveLibraryLinkDependenciesTest() throws Exception {
+                final Project project = ProjectBuilder.builder().build();
+                final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
+                                CMakeExtension.class, project.getTasks());
 
-        TestCMakePackage.register("Package0", extension);
-        TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
-        TestCMakeBinaryLibrary.register("BinaryLibrary0", extension,
-                Arrays.asList("Toolchain0"), CMakeBuildVariant.SHARED);
-        TestCMakeToolchain.registerWithLibraryDependencies("Toolchain0", extension,
-                Arrays.asList(new CMakeBuildItems(CMakeVisibility.PUBLIC, "-loption")),
-                Arrays.asList(
-                        new CMakeLibraryDependencies("target").from("Package0"),
-                        new CMakeLibraryDependencies("InterfaceLibrary0")
-                                .variant(CMakeLinkVariant.INTERFACE),
-                        new CMakeLibraryDependencies("BinaryLibrary0").from(project.getName())
-                                .variant(CMakeLinkVariant.SHARED)));
+                TestCMakePackage.register("Package0", extension);
+                TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
+                TestCMakeBinaryLibrary.register("BinaryLibrary0", extension,
+                                Arrays.asList("Toolchain0"), CMakeBuildVariant.SHARED);
+                TestCMakeToolchain.registerWithLibraryDependencies("Toolchain0", extension,
+                                Arrays.asList(Map.of("names", List.of("-loption"), CMakeLibraryLinkSpec.VISIBILITY, "PUBLIC")),
+                                Arrays.asList(
+                                                Map.of("components", List.of("target"),
+                                                                CMakeLibraryLinkSpec.PROJECT, "Package0"),
+                                                Map.of("components", List.of("InterfaceLibrary0"),
+                                                                CMakeLibraryLinkSpec.LINK_VARIANT, "INTERFACE"),
+                                                Map.of("components", List.of("BinaryLibrary0"),
+                                                                CMakeLibraryLinkSpec.PROJECT, project.getName(),
+                                                                CMakeLibraryLinkSpec.LINK_VARIANT, "SHARED")));
 
-        assertEquals(1, extension.getPackages().size());
-        assertEquals(1, extension.getToolchains().size());
-        assertEquals(2, extension.getLibraries().size());
-        assertEquals(0, extension.getApplications().size());
-        assertEquals(0, extension.getTests().size());
+                assertEquals(1, extension.getPackages().size());
+                assertEquals(1, extension.getToolchains().size());
+                assertEquals(2, extension.getLibraries().size());
+                assertEquals(0, extension.getApplications().size());
+                assertEquals(0, extension.getTests().size());
 
-        final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
-                extension.getToolchains());
-        final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
-                extension.getApplications(), extension.getTests());
+                final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
+                                extension.getToolchains());
+                final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
+                                extension.getApplications(), extension.getTests());
 
-        final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
-        assertEquals(1, toolchains.length);
+                final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
+                assertEquals(1, toolchains.length);
 
-        assertEquals("Toolchain0", toolchains[0].getName());
-        assertEquals(1, toolchains[0].getInterfaceLibraries().size());
-        assertEquals(0, toolchains[0].getStaticLibraries().size());
-        assertEquals(1, toolchains[0].getSharedLibraries().size());
-        assertEquals(0, toolchains[0].getApplications().size());
-        assertEquals(0, toolchains[0].getTests().size());
-    }
+                assertEquals("Toolchain0", toolchains[0].getName());
+                assertEquals(1, toolchains[0].getInterfaceLibraries().size());
+                assertEquals(0, toolchains[0].getStaticLibraries().size());
+                assertEquals(1, toolchains[0].getSharedLibraries().size());
+                assertEquals(0, toolchains[0].getApplications().size());
+                assertEquals(0, toolchains[0].getTests().size());
+        }
 
-    @Test
-    void resolveApplicationLinkDependenciesTest() throws Exception {
-        final Project project = ProjectBuilder.builder().build();
-        final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
-                CMakeExtension.class, project.getTasks());
+        @Test
+        void resolveApplicationLinkDependenciesTest() throws Exception {
+                final Project project = ProjectBuilder.builder().build();
+                final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
+                                CMakeExtension.class, project.getTasks());
 
-        TestCMakePackage.register("Package0", extension);
-        TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
-        TestCMakeBinaryLibrary.register("BinaryLibrary0", extension,
-                Arrays.asList("Toolchain0"), CMakeBuildVariant.SHARED);
-        TestCMakeToolchain.registerWithApplicationDependencies("Toolchain0", extension,
-                Arrays.asList(new CMakeBuildItems(CMakeVisibility.PRIVATE, "-loption")),
-                Arrays.asList(
-                        new CMakeExecutableDependencies("target").from("Package0"),
-                        new CMakeExecutableDependencies("InterfaceLibrary0")
-                                .from(project.getName())
-                                .variant(CMakeLinkVariant.INTERFACE),
-                        new CMakeExecutableDependencies("BinaryLibrary0")
-                                .variant(CMakeLinkVariant.SHARED)));
+                TestCMakePackage.register("Package0", extension);
+                TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
+                TestCMakeBinaryLibrary.register("BinaryLibrary0", extension,
+                                Arrays.asList("Toolchain0"), CMakeBuildVariant.SHARED);
+                TestCMakeToolchain.registerWithApplicationDependencies("Toolchain0", extension,
+                                Arrays.asList(Map.of("names", List.of("-loption"), CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE")),
+                                Arrays.asList(
+                                                Map.of("components", List.of("target"),
+                                                                CMakeLibraryLinkSpec.PROJECT, "Package0",
+                                                                CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE"),
+                                                Map.of("components", List.of("InterfaceLibrary0"),
+                                                                CMakeLibraryLinkSpec.PROJECT, project.getName(),
+                                                                CMakeLibraryLinkSpec.LINK_VARIANT, "INTERFACE",
+                                                                CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE"),
+                                                Map.of("components", List.of("BinaryLibrary0"),
+                                                                CMakeLibraryLinkSpec.LINK_VARIANT, "SHARED",
+                                                                CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE")));
 
-        assertEquals(1, extension.getPackages().size());
-        assertEquals(1, extension.getToolchains().size());
-        assertEquals(2, extension.getLibraries().size());
-        assertEquals(0, extension.getApplications().size());
-        assertEquals(0, extension.getTests().size());
+                assertEquals(1, extension.getPackages().size());
+                assertEquals(1, extension.getToolchains().size());
+                assertEquals(2, extension.getLibraries().size());
+                assertEquals(0, extension.getApplications().size());
+                assertEquals(0, extension.getTests().size());
 
-        final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
-                extension.getToolchains());
-        final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
-                extension.getApplications(), extension.getTests());
+                final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
+                                extension.getToolchains());
+                final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
+                                extension.getApplications(), extension.getTests());
 
-        final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
-        assertEquals(1, toolchains.length);
+                final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
+                assertEquals(1, toolchains.length);
 
-        assertEquals("Toolchain0", toolchains[0].getName());
-        assertEquals(1, toolchains[0].getInterfaceLibraries().size());
-        assertEquals(0, toolchains[0].getStaticLibraries().size());
-        assertEquals(1, toolchains[0].getSharedLibraries().size());
-        assertEquals(0, toolchains[0].getApplications().size());
-        assertEquals(0, toolchains[0].getTests().size());
-    }
+                assertEquals("Toolchain0", toolchains[0].getName());
+                assertEquals(1, toolchains[0].getInterfaceLibraries().size());
+                assertEquals(0, toolchains[0].getStaticLibraries().size());
+                assertEquals(1, toolchains[0].getSharedLibraries().size());
+                assertEquals(0, toolchains[0].getApplications().size());
+                assertEquals(0, toolchains[0].getTests().size());
+        }
 
-    @Test
-    void resolveTestLinkDependenciesTest() throws Exception {
-        final Project project = ProjectBuilder.builder().build();
-        final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
-                CMakeExtension.class, project.getTasks());
+        @Test
+        void resolveTestLinkDependenciesTest() throws Exception {
+                final Project project = ProjectBuilder.builder().build();
+                final CMakeExtension extension = project.getExtensions().create(CMakeExtension.NAME,
+                                CMakeExtension.class, project.getTasks());
 
-        TestCMakePackage.register("Package0", extension);
-        TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
-        TestCMakeBinaryLibrary.register("BinaryLibrary0", extension,
-                Arrays.asList("Toolchain0"), CMakeBuildVariant.SHARED);
-        TestCMakeToolchain.registerWithTestDependencies("Toolchain0", extension,
-                Arrays.asList(new CMakeBuildItems(CMakeVisibility.PRIVATE, "-loption")),
-                Arrays.asList(
-                        new CMakeExecutableDependencies("target").from("Package0"),
-                        new CMakeExecutableDependencies("InterfaceLibrary0")
-                                .from(project.getName())
-                                .variant(CMakeLinkVariant.INTERFACE),
-                        new CMakeExecutableDependencies("BinaryLibrary0")
-                                .variant(CMakeLinkVariant.SHARED)));
+                TestCMakePackage.register("Package0", extension);
+                TestCMakeInterfaceLibrary.register("InterfaceLibrary0", extension);
+                TestCMakeBinaryLibrary.register("BinaryLibrary0", extension,
+                                Arrays.asList("Toolchain0"), CMakeBuildVariant.SHARED);
+                TestCMakeToolchain.registerWithTestDependencies("Toolchain0", extension,
+                                Arrays.asList(Map.of("names", List.of("-loption"), CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE")),
+                                Arrays.asList(
+                                                Map.of("components", List.of("target"),
+                                                                CMakeLibraryLinkSpec.PROJECT, "Package0",
+                                                                CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE"),
+                                                Map.of("components", List.of("InterfaceLibrary0"),
+                                                                CMakeLibraryLinkSpec.PROJECT, project.getName(),
+                                                                CMakeLibraryLinkSpec.LINK_VARIANT, "INTERFACE",
+                                                                CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE"),
+                                                Map.of("components", List.of("BinaryLibrary0"),
+                                                                CMakeLibraryLinkSpec.LINK_VARIANT, "SHARED",
+                                                                CMakeLibraryLinkSpec.VISIBILITY, "PRIVATE")));
 
-        assertEquals(1, extension.getPackages().size());
-        assertEquals(1, extension.getToolchains().size());
-        assertEquals(2, extension.getLibraries().size());
-        assertEquals(0, extension.getApplications().size());
-        assertEquals(0, extension.getTests().size());
+                assertEquals(1, extension.getPackages().size());
+                assertEquals(1, extension.getToolchains().size());
+                assertEquals(2, extension.getLibraries().size());
+                assertEquals(0, extension.getApplications().size());
+                assertEquals(0, extension.getTests().size());
 
-        final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
-                extension.getToolchains());
-        final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
-                extension.getApplications(), extension.getTests());
+                final CMakeResolver resolver = new CMakeResolver(project, extension.getPackages(),
+                                extension.getToolchains());
+                final Collection<CMakeResolvedToolchain> results = resolver.process(extension.getLibraries(),
+                                extension.getApplications(), extension.getTests());
 
-        final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
-        assertEquals(1, toolchains.length);
+                final CMakeResolvedToolchain[] toolchains = results.toArray(new CMakeResolvedToolchain[results.size()]);
+                assertEquals(1, toolchains.length);
 
-        assertEquals("Toolchain0", toolchains[0].getName());
-        assertEquals(1, toolchains[0].getInterfaceLibraries().size());
-        assertEquals(0, toolchains[0].getStaticLibraries().size());
-        assertEquals(1, toolchains[0].getSharedLibraries().size());
-        assertEquals(0, toolchains[0].getApplications().size());
-        assertEquals(0, toolchains[0].getTests().size());
-    }
+                assertEquals("Toolchain0", toolchains[0].getName());
+                assertEquals(1, toolchains[0].getInterfaceLibraries().size());
+                assertEquals(0, toolchains[0].getStaticLibraries().size());
+                assertEquals(1, toolchains[0].getSharedLibraries().size());
+                assertEquals(0, toolchains[0].getApplications().size());
+                assertEquals(0, toolchains[0].getTests().size());
+        }
 }
